--- a/v4.18/graph.yaml
+++ b/v4.18/graph.yaml
@@ -11,6 +11,14 @@ entries:
     package: kubevirt-hyperconverged
     schema: olm.channel
   - entries:
+      - name: kubevirt-hyperconverged-operator.v4.18.0
+        replaces: kubevirt-hyperconverged-operator.v4.17.0
+        skipRange: '>=4.17.1 <4.18.0'
+    name: candidate
+    package: kubevirt-hyperconverged
+    schema: olm.channel
+---
+  - entries:
       - name: kubevirt-hyperconverged-operator.v4.12.0
         replaces: kubevirt-hyperconverged-operator.v4.11.1
         skipRange: '>=4.11.2 <4.12.0'
